リファクタ 2

--- a/step.yml
+++ b/step.yml
@@ -1,9 +1,9 @@
 title: |-
-  Bitrise step analyze android lint
+  Bitrise step Google Drive Upload
 summary: |
-  Bitrise step analyze android lint
+  Bitrise step Google Drive Upload
 description: |
-  Bitrise step analyze android lint
+  Bitrise step Google Drive Upload
 website: https://github.com/nttr-mypocket/bitrise_step_google_drive_upload
 source_code_url: https://github.com/nttr-mypocket/bitrise_step_google_drive_upload
 support_url: https://github.com/nttr-mypocket/bitrise_step_google_drive_upload/issues
@@ -21,25 +21,20 @@ toolkit:
   bash:
     entry_file: step.sh
 inputs:
-  - lint_xml: $LINT_XML_OUTPUT
+  - lint_file:
     opts:
-      title: "Location to XML file"
-      description: "Location to XML file"
+      title: "Location to file"
+      description: "on Google Drive"
       is_required: true
-  - lint_html: $LINT_HTML_OUTPUT
+  - lint_output:
     opts:
-      title: "Location to HTML file"
-      description: "Location to HTML file"
+      title: "Output file"
+      description: "on Google Drive"
       is_required: true
-  - lint_xml_output_file_name: lint_result.xml
+  - output_content_type:
     opts:
-      title: "Upload XML File"
-      description: "File Name on Google Drive"
-      is_required: true
-  - lint_html_output_file_name: lint_result.html
-    opts:
-      title: "Upload to HTML File"
-      description: "File Name on Google Drive"
+      title: "Content Type"
+      description: "text/xml, text/html..."
       is_required: true
   - service_account_private_key:
     opts:
