--- a/bitrise.yml
+++ b/bitrise.yml
@@ -1,3 +1,5 @@
+# Copyright © 2023 NTT Resonant Technology Inc. All Rights Reserved.
+
 format_version: "4"
 default_step_lib_source: https://github.com/bitrise-io/bitrise-steplib.git
 
