--- a/step.yml
+++ b/step.yml
@@ -1,7 +1,7 @@
 # Copyright © 2023 NTT Resonant Technology Inc. All Rights Reserved.
 
 title: |-
-  Bitrise step Google Drive Upload
+  Google Drive Upload
 summary: |
   Bitrise step Google Drive Upload
 description: |
